--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <p></p>
         <p class="view"> Main page </p>        
         <p class="view"> <a href="research.html">My Research Projects </a></p>
-        <p class="view"> <a href="/Users/Qihong/Dropbox/github/qihongl.github.io/myDocs/CV_QL.pdf">My CV</a></p>
+        <p class="view"> <a href="https://github.com/QihongL/qihongl.github.io/blob/master/myDocs/CV_QL.pdf">My CV</a></p>
         
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="/Users/Qihong/Dropbox/github/qihongl.github.io/myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="https://github.com/QihongL/qihongl.github.io/blob/master/myImages/logo/facebook.png" alt="myGithub" style="width:40px;height:40px;"></a>
         <a href="https://www.linkedin.com/in/qihong"> <img src="/Users/Qihong/Dropbox/github/qihongl.github.io/myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="/Users/Qihong/Dropbox/github/qihongl.github.io/myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
         </p>
