--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <p></p>
         <p class="view"> Main page </p>        
         <p class="view"> <a href="research.html">My Research Projects </a></p>
+        <!--
         <p class="view"> <a href="https://github.com/QihongL/qihongl.github.io/blob/master/myDocs/CV_QL.pdf">My CV</a></p>
+        -->
+        <p class="view"> <a href="myDocs/CV_QL.pdf">My CV</a></p>
+        
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="https://github.com/QihongL/qihongl.github.io/blob/master/myImages/logo/facebook.png" alt="myGithub" style="width:40px;height:40px;"></a>
