--- a/research.html
+++ b/research.html
@@ -23,7 +23,7 @@
         <p class="view"> <a href="myDocs/CV_QL.pdf">My CV</a></p>
         
         <p class="view">
-        <a href="https://github.com/QihongL"> <img src="myImages/logo/facebook.png" alt="myGithub" style="width:40px;height:40px;"></a>
+        <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
         <a href="https://www.linkedin.com/in/qihong"> <img src="myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
         </p>
