--- a/research.html
+++ b/research.html
@@ -36,22 +36,34 @@
 <p>Hi, This is Q's research project page. Here're some selected research projects. </p>
 <br>
 
+
+
+
 <p> <strong>1. A recurrent neural network model for human object recognition (2015~) </strong></p>
-<p> Model the behavioral and neural temporal dynamics of human visual object recognition processes. </p>
+<p> This is a computational model for the behavioral and neural temporal dynamics of human visual object recognition. Ultra-rapid visual categorization (<p><a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) is considered as evidence for a feed-forward view of visual recognition (<p><a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007 </a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other empirical phenomena, such as the classic basic level advantage. 
+ </p>
 <p><a href = "myDocs/cogsci2016_poster.pdf"> Link to the 2016 Cognitive Science Society conference poster. </a> </p>
 <p><a href = "https://github.com/QihongL/categorization_PDP"> Simulation source code on my Github </a> </p>
-
 <br>
+
+
+
+
+
 <p> <strong>2. A reinforcement learning driven neural network for counting (2015~) </strong></p>
 <p>Understand how children learn to count, as well as the benefit of social support and enriched feedback, from a computational perspective. </p>
 <p><a href = "myDocs/ncpw16_poster.pdf"> Link to the 2016 Neural Computation and Psychology Workshop poster. </a> </p>
 <p><a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Simulation source code on my Github </a> </p>
-
-
 <br>
-<p> <strong>3. fMRI decoding with iterative logistic LASSO  (2014~2015) </strong></p>
-<p>Study the neural representation of face, place and obejcts in human brain. </p>
+
+
+
+<p> <strong>3. fMRI decoding with sparse multivoxel pattern analysis (MVPA)  (2014~2015) </strong></p>
+<p>We investigated how face, place and obejcts represented in the human brain, with a novel method: whole brain iterative logistic LASSO. Different from some conventional ideas (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>),  we found that the neural representation of faces is highly distributed across the entire brain.  </p>
 <p><a href = "myDocs/cox_lu_rogers_CNS2015.pdf"> Link to the 2015 Cognitive Neuroscience Society Conference poster. </a> </p>
+
+
+
 
       </section>
       <footer>
