--- a/research.html
+++ b/research.html
@@ -40,7 +40,7 @@
 
 
 <p> <strong>1. A recurrent neural network model for human object recognition (2015~) </strong></p>
-<p> This is a computational model for the behavioral and neural temporal dynamics of human visual object recognition. Ultra-rapid visual categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) is considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007 </a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other empirical phenomena, such as the classic basic level advantage. 
+<p> This is a computational model for the behavioral and neural temporal dynamics of human visual object recognition. Ultra-rapid visual categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) is considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other empirical phenomena, such as the classic basic level advantage. 
  </p>
 <p><a href = "myDocs/cogsci2016_poster.pdf"> Link to the 2016 Cognitive Science Society conference poster. </a> </p>
 <p><a href = "https://github.com/QihongL/categorization_PDP"> Simulation source code on my Github </a> </p>
@@ -59,7 +59,7 @@
 
 
 <p> <strong>3. fMRI decoding with sparse multivoxel pattern analysis (MVPA)  (2014~2015) </strong></p>
-<p>We investigated how face, place and obejcts represented in the human brain, with a novel method: whole brain iterative logistic LASSO. Different from some conventional ideas (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>),  we found that the neural representation of faces is highly distributed across the entire brain.  </p>
+<p>We investigated how faces, places and objects are represented in the human brain, with a novel method: whole brain iterative logistic Lasso. Different from some conventional ideas (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we found that the neural representation of faces is highly distributed across the entire brain.</p>
 <p><a href = "myDocs/cox_lu_rogers_CNS2015.pdf"> Link to the 2015 Cognitive Neuroscience Society Conference poster. </a> </p>
 
 
