add an email link

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
         <a href="https://www.linkedin.com/in/qihong"> <img src="myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
+        <a href="mailto:qihong.lu@wisc.edu" target="_top"><img src="myImages/logo/email.png" alt="myFacebook" style="width:40px;height:40px;"></a>
         </p>
-
-
 
       </header>
       <section>
@@ -35,7 +34,6 @@
 <p>Hi, I'm Qihong, or "Q" for convenience. I am currently an undergraduate student studying psychology and mathematics at the <a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. I want to understand how the brain, and human cognition, works in general. And I am particularly interested in the neural representations of concepts, knowledge and memory. During my undergraduate career, I have been extremely fortunate to work with Professor <a href = "https://psych.wisc.edu/faculty-macdonald.htm"> Maryellen MacDonald, <a href = "https://psych.wisc.edu/faculty-rogers.htm">Tim Rogers</a> and <a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  and others. I deeply appreciate everyone's guidance and support.</p>
 
 <p>I plan to apply for interdisciplinary Ph.D. programs in human cognition this fall (2016).</p>
-
 
       </section>
       <footer>
