--- a/research.html
+++ b/research.html
@@ -25,7 +25,8 @@
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
         <a href="https://www.linkedin.com/in/qihong"> <img src="myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
+        <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>      
+        <a href="mailto:qihong.lu@wisc.edu" target="_top"><img src="myImages/logo/email.png" alt="myFacebook" style="width:40px;height:40px;"></a>  
         </p>
 
       </header>
