--- a/research.html
+++ b/research.html
@@ -34,17 +34,13 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage.</h3>
-
-<p>Hi, This is Q's research project page. Here're some selected research projects. </p>
-<br>
-
-
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here're some selected research projects!</h3>
 
 
 <p> <strong>1. A recurrent neural network model for human object recognition (2015~) </strong></p>
 <p style="width: 500px;">
-<img src="/myImages/research/verbalDynamics.png">
+<!-- <img src="/myImages/research/verbalDynamics.png"> -->
+<img src="/myImages/research/pdp_cat_demo.png">
 </p> 
 <p> This is a computational model for the behavioral and neural temporal dynamics of human visual object recognition. Ultra-rapid visual categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) is considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other empirical phenomena, such as the classic basic level advantage. 
 
