--- a/research.html
+++ b/research.html
@@ -36,10 +36,8 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here're some selected research projects!</h3>
 
-
-<p> <strong>1. A recurrent neural network model for human object recognition (2015~) </strong></p>
+<h3><p> <strong>1. A recurrent neural network for human object recognition</strong></p> </h3>
 <p style="width: 500px;">
-<!-- <img src="/myImages/research/verbalDynamics.png"> -->
 <img src="/myImages/research/pdp_cat_demo.png">
 </p> 
 <p> This is a computational model for the behavioral and neural temporal dynamics of human visual object recognition. Ultra-rapid visual categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) is considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other empirical phenomena, such as the classic basic level advantage. 
@@ -48,11 +46,11 @@ Currently, we are analyzing an ECoG data set, generously supported by Professor 
  </p>
 <p><a href = "myDocs/cogsci2016_poster.pdf"> 2016 Cognitive Science Society conference poster</a>,
 <a href = "https://github.com/QihongL/categorization_PDP"> Simulation code </a> </p>
-<br>
-<br>
+<br><br><br><br>
 
 
-<p> <strong>2. A reinforcement learning driven neural network for counting (2015~) </strong></p>
+
+<h3><p> <strong>2. A reinforcement learning network for "counting"</strong></p></h3>
 <p style="width: 400px;">
 <img src="/myImages/research/countModel_envir.png">
 </p> 
@@ -64,11 +62,12 @@ Currently, we are trying to augment this model with hard attention (<a href = "h
 </p>
 <p><a href = "myDocs/ncpw16_poster.pdf"> 2016 Neural Computation and Psychology Workshop poster</a>, 
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Simulation code</a> </p>
-<br>
-<br>
+<br><br><br><br>
 
 
-<p> <strong>3. Discover distributed neural representation: fMRI decoding with iterative Lasso (2014~2015) </strong></p>
+
+
+<h3><p> <strong>3. Discover distributed representation via fMRI decoding</strong></p></h3>
 
 <p style="width: 400px;">
 <img src="/myImages/research/ilassoResults.png">
