--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <p class="view"> Home </p>        
         <p class="view"> <a href="research.html">Research Projects </a></p>
-        <p class="view"> <a href="myDocs/CV_QL.pdf">Academic CV</a></p>
+        <p class="view"> <a href="academicCV.html">Academic CV</a></p>
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
