--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
                 
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view">Research Projects</p>        
-        <p class="view"> <a href="myDocs/CV_QL.pdf">Academic CV</a></p>
+        <p class="view"> <a href="academicCV.html">Academic CV</a></p>
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
