--- a/academicCV.html
+++ b/academicCV.html
@@ -50,7 +50,9 @@ Comprehensive Honors
 
 
 
-<h3><p> <strong>Research experience</strong></p></h3>
+<h3><p> <strong>Research experience</strong>  
+</p>
+</h3>
 
 Research Intern	@ Laboratory of Neural Coding 
 <div style="float: right;">Summer 2013 </div><br/>
@@ -62,16 +64,17 @@ Research Assistant @ Language and Cognitive Neuroscience Lab
 PI: Dr. Maryellen MacDonald & Dr. Mark Seidenberg, UW-Madison <br/>
 <br/>
 
-<b>Research Assistant @ Knowledge and Concepts Lab</b>
+<strong>*</strong>Research Assistant @ Knowledge and Concepts Lab
 <div style="float: right;">2014~ </div><br/>
 PI: Dr. Tim Rogers, UW-Madison <br/>
 <br/>
 
-<b>Visiting Researcher @ The PDP Lab</b>
+<strong>*</strong>Visiting Researcher @ The PDP Lab
 <div style="float: right;">Summer 2015 & 2016</div><br/>
 PI: Dr. Jay McClelland, Stanford University<br/>
 
-<div style="float: right;"><b>(BOLD = current position)</b></div>
+<div style="float: right;">(<strong>*</strong> = current)</div><br/>
+
 
 <br><br>
 
