--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergraduate student 
 <p>
 Recent update:
 <br>
-I plan to apply for Ph.D. programs in human cognition this fall (2016).
+- I plan to apply for Ph.D. programs in human cognition this fall (2016).
+<br>
+- I am currently visiting the PDP lab (6/11~8/26) at Stanford. 
 </p>
 
       </section>
