--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergraduate student 
 </p>
 
 <p>
-Recent update:
+<b>Recent update</b>:
 <br>
 - I plan to apply for Ph.D. programs in human cognition this fall (2016).
 <br>
