--- a/academicCV.html
+++ b/academicCV.html
@@ -43,7 +43,7 @@
 <h3><p> <strong>Education</strong></p> </h3>
 University of Wisconsin-Madison 
 <div style="float: right;">2013~2017 </div><br/>
-B.S. Mathematics, Psychology, minior in Computer Science <br/>
+B.S. Math, Psychology, minior in Computer Science <br/>
 Comprehensive Honors
 
 <br><br>
@@ -56,31 +56,31 @@ Comprehensive Honors
 
 Research Intern	@ Laboratory of Neural Coding 
 <div style="float: right;">Summer 2013 </div><br/>
-PI: Dr. Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics <br/>
+PI: Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics <br/>
 <br/>
 
 Research Assistant @ Language and Cognitive Neuroscience Lab 
 <div style="float: right;">2013~2015 </div><br/>
-PI: Dr. Maryellen MacDonald & Dr. Mark Seidenberg, UW-Madison <br/>
+PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 <br/>
 
 <strong>*</strong>Research Assistant @ Knowledge and Concepts Lab
 <div style="float: right;">2014~ </div><br/>
-PI: Dr. Tim Rogers, UW-Madison <br/>
+PI: Tim Rogers, UW-Madison <br/>
 <br/>
 
 <strong>*</strong>Visiting Researcher @ The PDP Lab
 <div style="float: right;">Summer 2015 & 2016</div><br/>
-PI: Dr. Jay McClelland, Stanford University<br/>
+PI: Jay McClelland, Stanford University<br/>
 
-<div style="float: right;">(<strong>*</strong> = current)</div><br/>
+<div style="float: right;">(<strong>*</strong> = current)</div>
 
 
 <br><br>
 
 
 
-<h3><p> <strong>Selected Honors & Award</strong></p></h3>
+<h3><p> <strong>Honors & Award</strong></p></h3>
 
 Undergraduate Research Scholar Award
 <div style="float: right;">2014, 2015 </div>
