--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="view"> </p>
 -->
 <p>
-Hi, I'm Qihong, or "Q" for convenience. I am currently an undergraduate student studying psychology and mathematics at the <a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. I want to understand how the brain, and human cognition, works in general. And I am particularly interested in the neural representations of concepts, knowledge and memory. During my undergraduate career, I have been extremely fortunate to work with Professor <a href = "https://psych.wisc.edu/faculty-macdonald.htm"> Maryellen MacDonald, <a href = "https://psych.wisc.edu/faculty-rogers.htm">Tim Rogers</a> and <a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  and others. I deeply appreciate everyone's guidance and support.
+Hi, I'm Qihong, or "Q" for convenience. I am currently an undergrad student studying psychology and math at the <a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. I have been studying the neural representations of concepts with computational modeling and behavioral and neuroimaging experiments. I have been extremely fortunate to work with Professor <a href = "https://psych.wisc.edu/faculty-macdonald.htm"> Maryellen MacDonald, <a href = "https://psych.wisc.edu/faculty-rogers.htm">Tim Rogers</a>,<a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  and others. I deeply appreciate everyone's guidance and support.
 </p>
 
 <p>
@@ -55,7 +55,7 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergraduate student 
 <br>
 - I plan to apply for Ph.D. programs in human cognition this fall (2016).
 <br>
-- I am currently visiting the PDP lab (6/11~8/26) at Stanford. 
+- I am currently visiting the PDP lab (6/11~8/26) and I will be back to Madison afterwards. 
 </p>
 
       </section>
