--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergrad student stud
 <p>
 <b>Recent update</b>:
 <br>
-- I plan to apply for Ph.D. programs in human cognition this fall (2016).
+- I plan to apply for Ph.D. programs in human cognition related fields this fall.
 <br>
 - I am currently visiting the PDP lab (6/11~8/26) and I will be back to Madison afterwards. 
 </p>
