--- a/research.html
+++ b/research.html
@@ -49,6 +49,7 @@
 Poster presented at the 38th Annual Meeting of the 
 <a href = "http://cognitivesciencesociety.org/index.html"> Cognitive Science Society </a>
 , Philadelphia, PA. 
+<br>
 </i>
 [
 <a href = "myDocs/cogsci2016_poster.pdf">Poster </a> , 
@@ -77,6 +78,7 @@ Currently, we are trying to augment this model with hard attention (<a href = "h
 Poster presented at the 15th
 <a href = "http://www.cs.bham.ac.uk/~jxb/NCPW.html">  Neural Computation and Psychology Workshop </a>
 , Philadelphia, PA. 
+<br>
 </i>
 [
 <a href = "myDocs/ncpw16_poster.pdf">Poster </a> , 
@@ -103,10 +105,13 @@ Cox, C. R., <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-hand
 <i>
 Poster presented at the 22nd
 <a href = "https://www.cogneurosociety.org/"> Cognitive Neuroscience Society </a> 
-annual conference, San Francisco, CA.
+annual conference, San Francisco, CA. 
+<br>
 </i>
 [
 <a href = "myDocs/cox_lu_rogers_CNS2015.pdf">Poster </a>
+,
+<a href = "https://github.com/crcox/iterativelasso"> Code</a>
 ]
 </p>
 
