--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <p class="view">
         <a href="https://www.linkedin.com/in/qihong"> <img src="myImages/logo/linkedin.png" alt="myLinkedin" style="width:40px;height:40px;"></a>
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
+<!--         
+        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
+ -->
         </p>
 
       </header>
