--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu's Page</title>
+    <title>Qihong Lu's research</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -44,11 +44,11 @@
 </p>
 ---
 <p>
+<b>Lu, Q.</b>, Cox, C., Rogers, T. T., Lambon Ralph, M.A., Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition process.
+<br>
 <b>Lu, Q.</b>, & Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition. 
 <i>
-Poster presented at the 38th Annual Meeting of the 
-<a href = "http://cognitivesciencesociety.org/index.html"> Cognitive Science Society </a>
-, Philadelphia, PA. 
+Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA. 
 <br>
 </i>
 [
@@ -75,9 +75,7 @@ Currently, we are trying to augment this model with hard attention (<a href = "h
 <p>
 <b>Lu, Q.</b>, & McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with “social scaffolding”. 
 <i>
-Poster presented at the 15th
-<a href = "http://www.cs.bham.ac.uk/~jxb/NCPW.html">  Neural Computation and Psychology Workshop </a>
-, Philadelphia, PA. 
+Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
 <br>
 </i>
 [
@@ -103,9 +101,7 @@ Poster presented at the 15th
 <p>
 Cox, C. R., <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
 <i>
-Poster presented at the 22nd
-<a href = "https://www.cogneurosociety.org/"> Cognitive Neuroscience Society </a> 
-annual conference, San Francisco, CA. 
+Poster presented at the 22nd Cognitive Neuroscience Society Annual Conference, San Francisco, CA. 
 <br>
 </i>
 [
