--- a/academicCV.html
+++ b/academicCV.html
@@ -56,20 +56,20 @@ Comprehensive Honors
 
 Research Intern	@ Laboratory of Neural Coding 
 <div style="float: right;">Summer 2013 </div><br/>
-PI: Longnian Lin, Shanghai Key Laboratory of Brain Functional Genomics <br/>
+PI: Longnian Lin, <a href = "http://sbg.ecnu.edu.cn/">Shanghai Key Laboratory of Brain Functional Genomics</a><br/>
 <br/>
 
-Research Assistant @ Language and Cognitive Neuroscience Lab 
+Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a>
 <div style="float: right;">2013~2015 </div><br/>
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 <br/>
 
-<strong>*</strong>Research Assistant @ Knowledge and Concepts Lab
+<strong>*</strong>Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
 <div style="float: right;">2014~ </div><br/>
 PI: Tim Rogers, UW-Madison <br/>
 <br/>
 
-<strong>*</strong>Visiting Researcher @ The PDP Lab
+<strong>*</strong>Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
 <div style="float: right;">Summer 2015 & 2016</div><br/>
 PI: Jay McClelland, Stanford University<br/>
 
