--- a/research.html
+++ b/research.html
@@ -77,7 +77,7 @@ Currently, we are trying to augment this model with hard attention (<a href = "h
 
 --- [
 <a href = "myDocs/ncpw16_poster.pdf">NCPW 2016 Poster</a>, 
-<a href = "myDocs/Lu_McClelland_Teaching_ANN_to_count">NCPW 2016 Abstract</a>, 
+<a href = "myDocs/Lu_McClelland_Teaching_ANN_to_count.pdf">NCPW 2016 Abstract</a>, 
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Code </a> 
 ]
 
