--- a/academicCV.html
+++ b/academicCV.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
+<!--     <link rel="stylesheet" href="stylesheets/tab.css"> -->
     <meta name="viewport" content="width=device-width">
 
   </head>
@@ -20,6 +21,8 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"><a href="research.html">Research Projects</a></p>        
         <p class="view"> Academic CV</p>
+        <p class="view"> <a href="resources.html">Resources</a></p>
+        <br>
 
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
@@ -36,7 +39,6 @@
         <h3>
         
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/CV_QL.pdf">my CV </a> in PDF format </h3>
-
 
 
 
@@ -59,17 +61,17 @@ Research Intern	@ Laboratory of Neural Coding
 PI: Longnian Lin, <a href = "http://sbg.ecnu.edu.cn/">Shanghai Key Laboratory of Brain Functional Genomics</a><br/>
 <br/>
 
-Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a>
+Research Assistant @ <a href = "http://lcnl.wisc.edu/">Language and Cognitive Neuroscience Lab </a> 
 <div style="float: right;">2013~2015 </div><br/>
 PI: Maryellen MacDonald & Mark Seidenberg, UW-Madison <br/>
 <br/>
 
-<strong>*</strong>Research Assistant @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
-<div style="float: right;">2014~ </div><br/>
+<strong>* </strong>Researcher @ <a href = "http://concepts.psych.wisc.edu/">Knowledge and Concepts Lab</a>
+<div style="float: right;">2014~</div><br/>
 PI: Tim Rogers, UW-Madison <br/>
 <br/>
 
-<strong>*</strong>Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
+</strong>Visiting Researcher @ <a href ="https://web.stanford.edu/group/pdplab/">The PDP Lab</a>
 <div style="float: right;">Summer 2015 & 2016</div><br/>
 PI: Jay McClelland, Stanford University<br/>
 
@@ -113,8 +115,6 @@ David H. Durra Scholarship
 Undergraduate Travel Awards
 <div style="float: right;">2016 </div>
 </br>
-
-
 
 
       </section>
