--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <p class="view"> Home </p>        
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="resources.html">Resources</a></p>
+        <br>
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
@@ -56,9 +58,7 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergrad student stud
 <p>
 <b>Recent update</b>:
 <br>
-- I plan to apply for Ph.D. programs in human cognition related fields this fall.
-<br>
-- I am currently visiting the PDP lab (6/11~8/26) and I will be back to Madison afterwards. 
+- I plan to apply for interdisciplinary Ph.D. programs in human cognition this fall.
 </p>
 
       </section>
