--- a/research.html
+++ b/research.html
@@ -20,6 +20,8 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view">Research Projects</p>        
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="resources.html">Resources</a></p>
+        <br>
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
@@ -41,13 +43,14 @@
 <p style="width: 500px;">
 <img src="/myImages/research/pdp_cat_demo.png">
 </p> 
-<p> This is a computational model for the temporal dynamics of human object recognition. Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other behavioral and neural data. 
-</p>
---- [
+<p> This is a computational model for the temporal dynamics of human object recognition. Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as evidence for a feed-forward view of visual recognition (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). Here, we show that an interactive model can be consistent with this result, and it can also explain many other behavioral and neural data.  <br>
+- [
 <a href = "myDocs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>, 
 <a href = "https://mindmodeling.org/cogsci2016/papers/0508/index.html"> CogSci 2016 Abstract</a>, 
 <a href = "https://github.com/QihongL/categorization_PDP"> Code</a> 
 ]
+</p>
+
 
 <p style="margin-left:.5in;text-indent:-.5in"> 
 <b>Lu, Q.</b>, Cox, C., Rogers, T. T., Lambon Ralph, M.A., Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition process.
@@ -72,14 +75,16 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 
 <p>Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps an artificial agent to learn a counting-related task. This modeling framework is inspired by the Deep-Q network (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>). 
 
-Currently, we are trying to augment this model with hard attention (<a href = "http://arxiv.org/abs/1406.6247">Mnih et al., 2014</a>).
-</p>
-
---- [
+Currently, I am trying to <a href = "https://github.com/QihongL/mathCognition_RAM"> augment this idea with hard attention</a> (<a href = "http://arxiv.org/abs/1406.6247">Mnih et al., 2014</a>).
+<br>
+- [
 <a href = "myDocs/ncpw16_poster.pdf">NCPW 2016 Poster</a>, 
 <a href = "myDocs/Lu_McClelland_Teaching_ANN_to_count.pdf">NCPW 2016 Abstract</a>, 
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Code </a> 
 ]
+</p>
+
+
 
 <p style="margin-left:.5in;text-indent:-.5in"> 
 <b>Lu, Q.</b>, & McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with “social scaffolding”. 
@@ -102,13 +107,14 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <p style="width: 400px;">
 <img src="/myImages/research/ilassoResults.png">
 
-<p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional findings (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we found that the neural representation of faces is highly distributed across the entire brain. </p>
-
---- [
+<p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional findings (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we found that the neural representation of faces is highly distributed across the entire brain. 
+<br>
+- [
 <a href = "myDocs/cox_lu_rogers_CNS2015.pdf">CNS 2015 Poster </a>
 ,
 <a href = "https://github.com/crcox/iterativelasso"> Code</a>
 ]
+</p>
 
 <p style="margin-left:.5in;text-indent:-.5in"> 
 Cox, C. R., <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
