--- a/resources.html
+++ b/resources.html
@@ -35,7 +35,9 @@
 
       </header>
       <section>
-        <h3>
+
+Here're resources for deep learning and reinforcement learning, primarily. 
+<br><br>
 
 <h3><p> <strong>Online courses </strong></p> </h3>
 <a href="http://www0.cs.ucl.ac.uk/staff/D.Silver/web/Teaching.html">Reinforcement learning</a>, David Silver, University College London
