--- a/tutorial.html
+++ b/tutorial.html
@@ -20,7 +20,9 @@
         <p class="view"> <a href="index.html">Home</a></p>
         <p class="view"> <a href="research.html">Research Projects </a></p>
         <p class="view"> <a href="academicCV.html">Academic CV</a></p>
+        <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view">Tutorial (under construction)</p>
+        <br>
         
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="myImages/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
