--- a/resources.html
+++ b/resources.html
@@ -103,11 +103,11 @@ Blogs:
 
 
 <h3><p> <strong>Frameworks </strong></p> </h3>
-<a href="https://www.tensorflow.org/">Tensorflow </a>: a reverse model auto-differentiation library in python  
+<a href="https://www.tensorflow.org/">Tensorflow </a>: a reverse mode auto-differentiation ML library in python
 <br>
 - <a href="http://playground.tensorflow.org/#activation=sigmoid&batchSize=1&dataset=xor&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=15&networkShape=1,2&seed=0.43437&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=true&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false">Neural Network Playground </a>
 <br>
-<a href="https://gym.openai.com/">OpenAI Gym </a>: simulated environment for RL agent
+<a href="https://gym.openai.com/">OpenAI Gym </a>: simulated environment for training RL agents
 <br>
 
 
