--- a/resources.html
+++ b/resources.html
@@ -46,11 +46,15 @@ Here're resources for deep learning and reinforcement learning, primarily.
 <a href="https://www.youtube.com/playlist?list=PLE6Wd9FR--EfW8dtjAuPoTuPcqmOV53Fu">Deep learning</a>,  Nando de Freitas, Oxford University
 <br>
 
+<a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, Fei-Fei Li, et al., Stanford University
+<br>
+
 <a href="http://info.usherbrooke.ca/hlarochelle/cours/ift725_A2013/contenu.html">Intro to neural network</a>, Hugo Larochelle, Université de Sherbrooke
 <br>
 
-<a href="http://www.cs.cmu.edu/~tom/10701_sp11/lectures.shtml">Intro to Machine learning</a>, Tom Mitchell, Carnegie Mellon
+<a href="http://www.cs.cmu.edu/~tom/10701_sp11/lectures.shtml">Intro to machine learning</a>, Tom Mitchell, Carnegie Mellon University
 <br>
+
 
 
 
@@ -60,10 +64,10 @@ Here're resources for deep learning and reinforcement learning, primarily.
 
 <h3><p> <strong>Books</strong></p> </h3>
 
-<a href="http://www.deeplearningbook.org/">Deep learning</a>, Ian Goodfellow and Yoshua Bengio and Aaron Courville
+<a href="http://www.deeplearningbook.org/">Deep learning</a>, Ian Goodfellow, Yoshua Bengio and Aaron Courville
 <br>
 
-<a href="https://webdocs.cs.ualberta.ca/~sutton/book/ebook/the-book.html">Intro to reinforcement learning</a>, Richard S. Sutton and Andrew G. Barto
+<a href="https://webdocs.cs.ualberta.ca/~sutton/book/ebook/the-book.html">Intro to reinforcement learning</a>, Richard Sutton and Andrew Barto
 <br>
 
 <a href="https://web.stanford.edu/group/pdplab/pdphandbook/">The PDP handbook</a>, Jay McClelland
@@ -75,6 +79,10 @@ Here're resources for deep learning and reinforcement learning, primarily.
 
 
 <h3><p> <strong>Other resources </strong></p> </h3>
+
+
+<a href="http://deeplearning4j.org/deeplearningforbeginners.html">Deep Learning for Beginners</a> 
+<br>
 
 <a href="http://deeplearning.net/reading-list/">Deep learning reading list</a> 
 <br>
