--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,9 @@ Here're resources for deep learning and reinforcement learning, primarily.
 <a href="https://www.youtube.com/playlist?list=PLE6Wd9FR--EfW8dtjAuPoTuPcqmOV53Fu">Deep learning</a>,  Nando de Freitas, Oxford University
 <br>
 
-<a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, Fei-Fei Li, et al., Stanford University
+<a href="http://cs231n.stanford.edu/">ConvNet for visual recognition</a>, Fei-Fei Li, et al., Stanford University 
+<br>
+- <a href="http://cs.stanford.edu/people/karpathy/convnetjs/">ConvNetJs</a>: some online demo, by Andrej Karpathy  
 <br>
 
 <a href="http://info.usherbrooke.ca/hlarochelle/cours/ift725_A2013/contenu.html">Intro to neural network</a>, Hugo Larochelle, Université de Sherbrooke
