--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Hi, I'm Qihong, or "Q" for convenience. I am currently an undergrad student stud
 <p>
 <b>Recent update</b>:
 <br>
-- I plan to apply for interdisciplinary Ph.D. programs in human cognition this fall.
+8/31/2016 -  I plan to apply for interdisciplinary Ph.D. programs in human cognition this fall.
 </p>
 
       </section>
