--- a/resources.html
+++ b/resources.html
@@ -36,7 +36,7 @@
       </header>
       <section>
 
-Here're resources for deep learning and reinforcement learning, primarily. 
+Here're some resources for deep learning and reinforcement learning, primarily. 
 <br><br>
 
 <h3><p> <strong>Online courses </strong></p> </h3>
