--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
 
 
 <p>
-Hi, I'm Qihong, or "Q" for convenience. I am currently an undergrad student studying psychology and math at the <a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. I have been studying the neural representations of concepts with computational modeling and behavioral and neuroimaging experiments. I have been extremely fortunate to work with Professor <a href = "https://psych.wisc.edu/faculty-macdonald.htm"> Maryellen MacDonald, <a href = "https://psych.wisc.edu/faculty-rogers.htm">Tim Rogers</a>,<a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  and others. I deeply appreciate everyone's guidance and support.
+Hi, I'm Qihong, or just "Q", an undergrad studying psychology and math at the 
+<a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. 
+With a combination of behavioral experiments, neuroimaging, and computational modeling techniques, I have been studying concepts representation and mathematical cognition, advised by Professor 
+<a href = "http://lcnl.wisc.edu/index.php/people/maryellen-c-macdonald/"> Maryellen MacDonald</a>, 
+<a href = "http://psych.wisc.edu/Rogers/">Tim Rogers</a>,
+<a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  
+and others. Their dedicated guidance had a significant influence on me. I deeply appreciate their support.
 </p>
 
 <p>
