--- a/tutorial.html
+++ b/tutorial.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu's tutorial</title>
+    <title>Qihong Lu | Tutorial</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -36,27 +36,20 @@
 
       </header>
       <section>
-        <h3>
+<h3><p>This page is under construction... </p>
+<br>
 
-<h3><p> <strong>Intro to neural network modeling with Tensorflow</strong></p> </h3>
+<h3><p> <strong>1. <a href = "https://github.com/QihongL/neuralNet_tutorial_tensorflow">Intro to neural network modeling with Tensorflow<a/></strong></a></p> </h3>
+<p>
+I am working on writing some tutorial code for <a href = "http://concepts.psych.wisc.edu/index.php/classes/psychology-711/">Psych 711 Introduction to Parallel Distributed Processing </a>, taught by Professor Tim Rogers at UW-Madison. This course provides a high level introduction to neural network modeling in the context of cognitive psychology research. I am quite busy right now so I don't feel it can be finished soon... 
+</p>
+<br>
 
-<br><br><br>
-
-
-<h3><p> <strong>Understand L1 and L2 regularization</strong></p> </h3>
-
-<br><br><br>
-
-
-
-<h3><p> <strong>Approximate L0 solution with iterative L1 reweighting </strong></p> </h3>
-
-<br><br><br>
-
-
-
-
-
+<h3><p> <strong>2. <a href = "myDocs/ECE532_reweighted_lasso_and_application_neuroimaging.pdf">Approximate L0 solution with iterative L1 reweighting </a> </strong></p> </h3>
+<p>
+This is a tutorial I wrote when I was taking <a href = "http://nowak.ece.wisc.edu/ece532/"> ECE 532 Theory and Applications of Pattern Recognition</a>, taught by Professor Robert Nowak and Laurent Lessard at UW-Madison. I will rewrite it with some updates in the future. 
+</p>
+<br>
 
 
       </section>
