--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </script>
     
     
-    <title>Qihong Lu - University of Wisconsin-Madison</title>
+    <title>Qihong Lu | UW-Madison</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
