--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu's research</title>
+    <title>Qihong Lu | Research</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -125,7 +125,7 @@ Poster presented at the 22nd Cognitive Neuroscience Society Annual Conference, S
 </p>
 
 <p style="margin-left:.5in;text-indent:-.5in"> 
-Cox, C. R.,  <b>Lu, Q. </b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
+Cox, C. R.,  <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis. 
 <i>
 Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
 </i>
