--- a/academicCV.html
+++ b/academicCV.html
@@ -36,22 +36,22 @@
       </header>
       <section>
         <h3>
+
+
         
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Here's <a href="myDocs/CV_QL.pdf">my CV </a> in PDF format </h3>
 
-
-
 <h3><p> <strong>Education</strong></p> </h3>
 University of Wisconsin-Madison 
-<div style="float: right;">2013~2017 </div><br/>
-B.S. Math, Psychology, minior in Computer Science <br/>
-Comprehensive Honors
+<div style="float: right;">2013 ~ May 2017 </div><br/>
+B.S. Mathematics, Psychology, minior in Computer Science <br/>
+Comprehensive Honors <br/>
 
 <br><br>
 
 
 
-<h3><p> <strong>Research experience</strong>  
+<h3><p> <strong>Research Experience</strong>  
 </p>
 </h3>
 
@@ -78,8 +78,6 @@ PI: Jay McClelland, Stanford University<br/>
 
 
 <br><br>
-
-
 
 <h3><p> <strong>Honors & Award</strong></p></h3>
 
