--- a/resources.html
+++ b/resources.html
@@ -33,6 +33,12 @@
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>        
         </p>
 
+        <p class="view">
+        <a href="https://twitter.com/Qihong_Lu"> <img src="myImages/logo/twitter_flat.png" alt="myTwitter" style="width:42px;height:42px;"></a>
+<!--         <a href="https://www.facebook.com/qihong.lu.9"> <img src="myImages/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>         -->
+        </p>
+
+
       </header>
       <section>
 
