--- a/index.html
+++ b/index.html
@@ -68,18 +68,20 @@
 
 <p>
 Hi, I'm Qihong, or just "Q", an undergrad studying psychology and math at the 
-<a href="http://www.wisc.edu/">University of Wisconsin-Madison</a>. 
-With a combination of behavioral experiments, neuroimaging, and computational modeling techniques, I have been studying concepts representation and mathematical cognition, advised by Professor 
-<a href = "http://lcnl.wisc.edu/index.php/people/maryellen-c-macdonald/"> Maryellen MacDonald</a>, 
+<a href="http://www.wisc.edu/">U. of Wisconsin-Madison</a>. 
+Combining behavioral experiments, neuroimaging, and computational modeling, I have been studying semantic knowledge representation and mathematical cognition, advised by Professor 
 <a href = "http://psych.wisc.edu/Rogers/">Tim Rogers</a>,
+<a href = "http://lcnl.wisc.edu/index.php/people/maryellen-c-macdonald/"> Maryellen MacDonald</a>, 
 <a href = "http://psych.stanford.edu/~jlm/"> Jay McClelland </a>  
-and others. Their dedicated guidance had a significant influence on me. I deeply appreciate their support.
+and others. Their dedicated guidance had a significant influence on me. I deeply appreciate their support. 
+
+Outside the lab, I enjoy watching Japanese anime, tasting desserts and learning violin.
 </p>
 
 <p>
 <b>Recent update</b>:
 <br>
-8/31/2016 -  I plan to apply for interdisciplinary Ph.D. programs in human cognition this fall.
+8/31/2016 -  I plan to apply for interdisciplinary Ph.D. programs in psychology and neuroscience this fall.
 </p>
 
       </section>
