--- a/research.html
+++ b/research.html
@@ -112,7 +112,8 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <p style="width: 450px;">
 <img src="/myImages/research/ilassoResults.png">
 
-<p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional findings (<a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we found that the neural representation of faces is highly distributed across the entire brain. 
+<p>We investigated how faces, places and objects are represented in the human brain, with a novel multi-voxel pattern analysis (MVPA) method: whole-brain iterative logistic Lasso. Different from some conventional methods (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we were able to find distributed neural representation of faces that is idiosyncratic across subjects. 
+
 <br>
 - [
 <a href = "myDocs/cox_lu_rogers_CNS2015.pdf">CNS 2015 Poster </a>
