--- a/academicCV.html
+++ b/academicCV.html
@@ -84,7 +84,7 @@ PI: Jay McClelland, Stanford University<br/>
 
 <br><br>
 
-<h3><p> <strong>Honors & Award</strong></p></h3>
+<h3><p> <strong>Honors & Awards</strong></p></h3>
 
 Undergraduate Research Scholar Award
 <div style="float: right;">2014, 2015 </div>
@@ -114,7 +114,7 @@ David H. Durra Scholarship
 <div style="float: right;">2016 </div>
 </br>
 
-Undergraduate Travel Awards
+Undergraduate Travel Award
 <div style="float: right;">2016 </div>
 </br>
 
